force-app/main/default/objects/sked__Shift__c/sked__Shift__c.object-meta.xml
<CustomObject>
    <label>Shift</label>
    <nameField>
        <displayFormat>SHFT-{0000}</displayFormat>
        <label>Shift Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shifts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>