force-app/main/default/objects/sked__Shift__c/fields/sked__Duration__c.field-meta.xml
<CustomField>
    <fullName>sked__Duration__c</fullName>
    <inlineHelpText>Shift duration in minutes</inlineHelpText>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>