force-app/main/default/objects/sked__Shift__c/fields/sked__End1__c.field-meta.xml
<CustomField>
    <fullName>sked__End1__c</fullName>
    <label>End</label>
    <type>DateTime</type>
</CustomField>