force-app/main/default/objects/sked__Shift__c/fields/sked__End__c.field-meta.xml
<CustomField>
    <fullName>sked__End__c</fullName>
    <formula>sked__Start__c  + sked__Duration__c  / 1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End (Deprecated)</label>
    <type>DateTime</type>
</CustomField>