force-app/main/default/objects/sked__Shift__c/fields/sked__Is_Draft__c.field-meta.xml
<CustomField>
    <fullName>sked__Is_Draft__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Draft</label>
    <type>Checkbox</type>
</CustomField>