force-app/main/default/objects/sked__Shift__c/fields/sked_Address__c.field-meta.xml
<CustomField>
    <fullName>sked_Address__c</fullName>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>