force-app/main/default/objects/sked__Shift__c/fields/sked_Description__c.field-meta.xml
<CustomField>
    <fullName>sked_Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>