force-app/main/default/objects/sked__Shift__c/fields/sked_GeoLocation__c.field-meta.xml
<CustomField>
    <fullName>sked_GeoLocation__c</fullName>
    <label>GeoLocation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>