force-app/main/default/objects/sked__Shift__c/validationRules/sked__DurationMustBeGreaterThanZero.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__DurationMustBeGreaterThanZero</fullName>
    <active>true</active>
    <errorConditionFormula>sked__Duration__c  &lt; 1</errorConditionFormula>
    <errorDisplayField>sked__Duration__c</errorDisplayField>
    <errorMessage>Shift duration must be greater than 0 minute</errorMessage>
</ValidationRule>