force-app/main/default/objects/sked__Shift__c/validationRules/sked__DurationMustMatchStartToEnd.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__DurationMustMatchStartToEnd</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( sked__End1__c ) ) , NOT( ISNULL( sked__Start__c ) ), sked__Duration__c  &lt;&gt;  ROUND( (sked__End1__c  -  sked__Start__c) * 1440 ,0)  )</errorConditionFormula>
    <errorMessage>Duration must match Start to End</errorMessage>
</ValidationRule>