force-app/main/default/objects/sked__Shift__c/validationRules/sked__StartEndDurationAreRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__StartEndDurationAreRequired</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISNULL( sked__Start__c ) , ISNULL( sked__End1__c ) , ISNULL( sked__Duration__c ) )</errorConditionFormula>
    <errorMessage>Start, End and Duration are required</errorMessage>
</ValidationRule>