force-app/main/default/objects/sked__Shift__c/listViews/sked__All.listView-meta.xml
<ListView>
    <fullName>sked__All</fullName>
    <columns>NAME</columns>
    <columns>sked__Start__c</columns>
    <columns>sked__End1__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>